<resources>
    <!-- Common texts -->
    <string name="app_name">MammouthMedicalPharmacyApp</string>
    <string name="title01">Mammouth Medical</string>
    <string name="begin">Begin Shopping</string>
    <string name="go">Go!</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login With Google Account</string>
    <string name="register">Register Account</string>
    <string name="update">Update User Info</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Delete Profile</string>

    <!-- Register common -->
    <string name="user_name">Username</string>
    <string name="email_address">E-mail address</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Home address</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be filled</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Menu Items -->
    <string name="search">Search</string>
    <string name="other">Other</string>
    <string name="view_selector">Select view</string>

    <string name="default_cart_item_count">1</string>
    <string name="home_page">"Home Page"</string>
    <string name="shopping_page">"Main Shopping Page"</string>
    <string name="shopping_cart">"Shopping Cart"</string>
    <string name="profile">"Profile"</string>
    <string name="logout">"Logout"</string>

    <!-- ShopList and Items -->
    <string name="item_image_content">Content</string>
    <string name="item_placeholder">Item</string>
    <string name="item_info_placeholder">Item info</string>
    <string name="to_cart">Add to cart</string>
    <string name="delete_item">Delete item</string>

    <!-- Categories -->
    <string name="line">---------------------------------</string>
    <string name="category_firstAid">First Aid</string>
    <string name="category_hayFever">Hay Fever</string>
    <string name="category_coldEtc">Cold &amp; Cough &amp; Flu</string>
    <string name="category_thrushTre">Thrush Treatment</string>
    <string name="category_travelMed">Travel Medicine</string>

    <!-- Cart -->
    <string name="count">Count: </string>
    <string name="minus_one">-1</string>
    <string name="clear_cart">Clear cart</string>
</resources>