<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/baseline_menu_24"
        android:title=""
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/home_page"
                android:icon="@drawable/baseline_home_24"
                android:title="@string/home_page"
                app:showAsAction="never" />
            <item
                android:id="@+id/shopping_page"
                android:icon="@drawable/baseline_shop_24"
                android:title="@string/shopping_page"
                app:showAsAction="never" />
            <item
                android:id="@+id/shopping_cart"
                android:icon="@drawable/baseline_shopping_cart_24"
                android:title="@string/shopping_cart"
                app:showAsAction="never" />
            <item
                android:id="@+id/profile"
                android:icon="@drawable/baseline_person_24"
                android:title="@string/profile"
                app:showAsAction="never" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="@string/logout"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>